--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,57 @@
-.header {
+/* ----------- HEADER ----------- */
+.page-header {
+  background-color: #c29d84;
   padding: 20px 0;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
-.nav {
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* ----------- FORM ----------- */
+.form {
   display: flex;
-  justify-content: space-between;
-}
-.nav-logo {
-  display: inline-flex;
   align-items: center;
+  gap: 12px;
   justify-content: center;
 }
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+
+.form input {
+  width: 300px;
+  padding: 10px 14px;
+  border-radius: 6px;
+  border: 1px solid #6f4e37;
+  font-size: 16px;
+  transition: 0.3s;
+  background-color: transparent;
 }
-.nav-link {
-  position: relative;
-  display: block;
+
+.form input:focus {
+  border-color: #e0cbb4;
+  background-color: transparent;
+  outline: none;
+}
+
+.form button {
+  padding: 10px 18px;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.3s;
+  box-shadow: 0 1px 2px 0 rgba(11, 8, 3, 0.05), inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(11, 8, 3, 0.15), inset 0 2px 1px 0 rgba(255, 255, 255, 0.25), inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
+  background-color: #6f4e37;
+  border: none;
   font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #fff;
 }
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
-}
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
-}
-.nav-link.active::after {
-  background: #747bff;
+
+.form button:hover {
+  opacity: 0.5;
 }
